# oops

./: .gitignore  Cargo.toml  LICENSE-MIT  Makefile  README.md
demo/: demo.tape
docker/: Dockerfile  demo.Dockerfile
openspec/: config.yaml
openspec/changes/add-apfs-backend/: design.md  proposal.md  tasks.md
openspec/changes/add-apfs-backend/specs/diff/: spec.md
openspec/changes/add-apfs-backend/specs/safety/: spec.md
openspec/changes/add-apfs-backend/specs/sandbox/: spec.md
openspec/changes/add-apfs-backend/specs/session/: spec.md
openspec/changes/add-core-sandbox-loop/: design.md  proposal.md  tasks.md
openspec/changes/add-core-sandbox-loop/specs/cli/: spec.md
openspec/changes/add-core-sandbox-loop/specs/diff/: spec.md
openspec/changes/add-core-sandbox-loop/specs/safety/: spec.md
openspec/changes/add-core-sandbox-loop/specs/sandbox/: spec.md
openspec/changes/add-core-sandbox-loop/specs/session/: spec.md
openspec/changes/add-rootless-linux/: design.md  proposal.md  tasks.md
openspec/changes/add-rootless-linux/specs/safety/: spec.md
openspec/changes/add-rootless-linux/specs/sandbox/: spec.md
openspec/changes/apfs-research-spike/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-12-add-apfs-backend/specs/safety/: spec.md
openspec/changes/archive/2026-07-12-add-core-sandbox-loop/: tasks.md
openspec/changes/archive/2026-07-12-add-core-sandbox-loop/specs/safety/: spec.md
openspec/changes/archive/2026-07-12-add-core-sandbox-loop/specs/session/: spec.md
openspec/changes/archive/2026-07-12-readable-diff-output/: design.md
openspec/changes/archive/2026-07-12-readable-diff-output/specs/diff/: spec.md
openspec/changes/archive/2026-07-12-release-v0-1-0/: design.md  tasks.md
openspec/changes/confinement-spike/: design.md  proposal.md  tasks.md
openspec/changes/oops-shell-spike/: design.md  proposal.md  tasks.md
openspec/changes/readable-diff-output/: proposal.md  tasks.md
openspec/changes/readable-diff-output/specs/cli/: spec.md
openspec/changes/readable-diff-output/specs/diff/: spec.md
openspec/changes/release-v0-1-0/: proposal.md  tasks.md
openspec/changes/release-v0-1-0/specs/release/: spec.md
openspec/changes/rootless-linux-followups/: proposal.md  tasks.md
openspec/changes/rootless-linux-followups/specs/sandbox/: spec.md
openspec/changes/rootless-linux-followups/specs/session/: spec.md
openspec/changes/stale-cwd-undo-notice/: proposal.md  tasks.md
openspec/changes/stale-cwd-undo-notice/specs/safety/: spec.md
openspec/specs/cli/: spec.md
openspec/specs/diff/: spec.md
openspec/specs/release/: spec.md
openspec/specs/safety/: spec.md
openspec/specs/sandbox/: spec.md
openspec/specs/session/: spec.md
spikes/apfs/: README.md  bench.c
spikes/confinement/: README.md  bare_metal_acceptance.sh  userns_escape_probe_linux.sh  vm_matrix.sh
spikes/oops-shell/: README.md  authority_probe_macos.sh  overlay_shell_probe_linux.sh
src/: diff.rs  main.rs  session.rs  state.rs
src/backend/: apfs.rs  mod.rs  overlayfs.rs
tests/: apfs.rs  fail_closed_host.rs  linux.rs
